# Taxstox

./: .gitignore  CLAUDE.md  DATA_MODEL.md  HANDOFF.md  README.md  Signup-login--Prasoon.txt  render.yaml
apps/api/: .env.example  Dockerfile  pyproject.toml  railway.json  requirements.txt
apps/api/alembic/versions/: 002_enterprise_tenants.py
apps/api/src/: main.py
apps/api/src/api/: auth_routes.py  calculators.py  dashboard.py  routes.py  simulation.py  tax_routes.py
apps/api/src/auth/: jwt.py
apps/api/src/builders/: base_builder.py  itr1.py  itr_json_builder.py  validator.py
apps/api/src/db/: database.py  tax_queries.py
apps/api/src/engine/: __init__.py  audit.py  business_income.py  chapter_via.py  classifier.py  compliance_checker.py  computation_result.py  cross_validator.py  deductions_computer.py  donation_80g.py  entity_tax.py  explain.py  filing_readiness.py  finance_act_analyzer.py  house_property.py  interest_engine.py  itr_selector.py  knowledge_graph.py  production_health.py  provision_tracer.py  questions.py  recommendation_engine.py  regime_optimizer.py  regime_optimizer_v2.py  residential_status.py  (+7 more)
apps/api/tests/: conftest.py  factories.py  test_audit.py  test_classifier.py  test_confidence.py  test_deductions_computer.py  test_enterprise.py  test_financial_year.py  test_golden_vectors.py  test_house_property.py  test_integration.py  test_interest_engine.py  test_models.py  test_p1.py  test_p2.py  test_p3.py  test_p4.py  test_production_health.py  test_salary_computer.py  test_security.py  test_tds_reconciler.py  test_validation_pipeline.py
(+186 files in other folders)
