[project]
name = "taxstox-backend"
version = "0.1.0"
description = "TaxStox — ITR Auto-Filing & Stock Analytics Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pikepdf>=9.0",
    "pdfplumber>=0.11",
    "python-multipart>=0.0.12",
    "redis>=5.2",
    "cryptography>=44.0",
    "python-decouple>=3.8",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
